fix spacing

--- a/styles/Accordion.module.css
+++ b/styles/Accordion.module.css
@@ -14,7 +14,7 @@
   color: rgb(var(--white));
   cursor: pointer;
   padding: 0.4vw 1vh;
-  width: 98vw;
+  width: 97vw;
   height: 55px;
   text-align: left;
   align-items: center;
@@ -37,7 +37,7 @@
 
 .panel {
   overflow: hidden;
-  width: 98vw;
+  width: 97vw;
   background-color: rgba(var(--grey), 0.2);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -46,10 +46,6 @@
 @media (max-width: 1150px) {
   .accordion {
     row-gap: 2vh;
-  }
-
-  .panel {
-    width: auto;
   }
 }
 
